# myBLDC

./: .gitignore  README.md  flake.nix
Libraries/cmsis/: mpu_armv7.h
app/: app_main.c  app_task.c  app_task.h
bsp/board/: bsp_board.h  bsp_clock.c  bsp_clock.h  bsp_init.c  bsp_init.h
bsp/config/: FreeRTOSConfig.h
bsp/core/: freertos_hooks.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  stm32g4xx_it.h
bsp/driver/: bsp_adc.c  bsp_adc.h  bsp_gpio.c  bsp_gpio.h  bsp_i2c.c  bsp_i2c.h  bsp_oled.c  bsp_oled.h  bsp_pwm.c  bsp_pwm.h  bsp_tim.c  bsp_tim.h  bsp_u8g2_port.c  bsp_u8g2_port.h  bsp_uart.c  bsp_uart.h
bsp/runtime/: syscalls.c  sysmem.c
docs/: 板级资源描述.md  软件架构.dio  软件架构.md
module/display/: module_display.c  module_display.h
module/motor/: module_motor.c  module_motor.h
project/: CMakeLists.txt  STM32G431.svd  STM32G431RBTX_FLASH.ld  arm-gnu-toolchain.cmake
user/: main.c  main.h  stm32g4xx_hal_conf.h  stm32g4xx_hal_msp.c  stm32g4xx_it.c  stm32g4xx_it.h
